--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -30,10 +30,15 @@ jobs:
         with:
           name: dist-files
           path: dist
-
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Get build artifact action
+        uses: action/artifact-download@v4
+        with:
+          name: dist-files
+      - name: output contents
+        run: ls
       - name: Deploy
         run: echo "Deploying..."
