--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Get code
         uses: actions/checkout@v4
       - name: Cache dependencies
-        uses: actions/cache"v4
+        uses: actions/cache@v4
         with:
           path: ~/.npm
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
